# JWT-FASTAPI-AUTH

./: .dockerignore  .envrc  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 620bf19c9b10_add_user_type_enum_column_to_users_table.py  bf250f022005_initial.py
app/: crud.py  database.py  dependencies.py  main.py  models.py  schemas.py
app/core/: config.py  exceptions.py  handlers.py  messages.py  security.py
app/routers/: router.py  users.py
tests/: conftest.py  health_test.py  users_test.py
