[project]
name = "jwt-fastapi-auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "pre-commit>=4.6.0",
    "psycopg2>=2.9.12",
    "pydantic>=2.13.3",
    "ruff>=0.15.12",
    "sqlmodel>=0.0.38",
]

