[project]
name = "jwt-fastapi-auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.136.1",
    "passlib[bcrypt]>=1.7.4",
    "pre-commit>=4.6.0",
    "psycopg2>=2.9.12",
    "pydantic>=2.13.3",
    "python-jose[cryptography]>=3.5.0",
    "ruff>=0.15.12",
    "sqlmodel>=0.0.38",
]

